# AskMyDocs

./: .dockerignore  .gitignore  README.md  SETUP.md  docker-compose.yml
.cursor/: root-rules.md
backend/: .dockerignore  .env.sample  Dockerfile  pyproject.toml  requirements.txt
backend/.cursor/: rules.md
backend/app/: main.py
backend/app/api/routes/: chat.py  conversations.py  documents.py  health.py  upload.py
backend/app/core/: __init__.py  config.py  database.py  exceptions.py  logging.py
backend/app/middleware/: exception_handler.py  logging_middleware.py
backend/app/rag/: __init__.py  memory_service.py  pipeline.py
backend/app/rag/agents/: __init__.py
backend/app/rag/prompts/: __init__.py  system_prompts.py  templates.py
backend/app/rag/utils/: __init__.py  context_builder.py  prompt_builder.py
backend/app/repositories/: __init__.py  chromadb_repository.py
backend/app/schemas/: __init__.py  chat.py  retrieval.py  upload.py
backend/app/services/: __init__.py  chunking_service.py  document_parser.py  ingestion_service.py  llm_service.py  retrieval_service.py  task_tracker.py  upload_service.py
backend/app/vectorstore/: __init__.py  chromadb_store.py
backend/migrations/: README.md  init.sql
backend/scripts/: test_db_connection.py  test_end_to_end_flow.py  test_llm.py  test_rag_pipeline.py  test_retrieval.py
docs/: FLOW_DOCUMENTATION.md  api-design.md  architecture.md  docker-setup.md  env-files-guide.md  plan.md  rag-design.md  setup-guide.md
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  (+1 more)
(+16 files in other folders)
